--- a/menu/index.html
+++ b/menu/index.html
@@ -444,93 +444,44 @@
 <!-- tab fine -->
             </div>
         </div>
-<!-- call to action prenota un tavolo inizio -->
-        <aside class="large-4 columns hide-for-medium-down extra-space-aside-tab-menu ">
+<!-- call to action prenota inizio -->
+        <aside class="large-4 columns hide-for-medium-down extra-space-aside-tab-menu panel">
             <div itemscope itemtype="http://schema.org/Restaurant">
-                <h5>Dove siamo</h5>
-                <h6>
-                    <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                        <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                        <br class="hide-for-small">
-                        <span itemprop="postalCode">60024</span>
-                        <span itemprop="addressLocality">Filottrano</span>
-                        <span itemprop="addressRegion">AN</span>
-                        <br class="hide-for-small">
-                        <span class="hide-for-small" itemprop="addressCountry">Italia</span>
-                    </a>
-                </h6>
-                
-                <h5 class="extra-space-aside">Orari aperura</h5>
-                <h6>
-                    <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00"><span> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00</span>
-                </h6>
-                 <h6>
-                    <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><span> Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00</span>
-                </h6>
-                <h6><em>Chiusi solo il 1 Gennaio</em></h6>
-                <a role="button" href="#" class="button extra-space-button" data-reveal-id="prenota-online">Prenota un tavolo</a>
-                    <div id="prenota-online" class="reveal-modal" data-reveal>
-                        <a class="close-reveal-modal"> &#215; </a> 
-                        <form action="input">
-                            <div class ="row">
-                                <div class="small-5 medium-2 large-2 columns">  
-                                    <label>Persone
-                                        <select>
-                                          <option value="1">1</option>
-                                          <option value="2">2</option>
-                                          <option value="3">3</option>
-                                          <option value="4">4</option>
-                                          <option value="5">5</option>
-                                          <option value="6">6</option>
-                                          <option value="7">7</option>
-                                          <option value="8">8</option>
-                                        </select>
-                                      </label>
-                                </div>
-                            </div>
-                            <div class ="row">
-                                <div class="small-7 medium-4 large-3 columns">  
-                                    <label>Data
-                                        <input type="date" placeholder="" />
-                                      </label>
-                                </div>
-                                <div class="small-5 medium-3 large-2 columns end">  
-                                    <label>Ora
-                                        <input type="time" placeholder="" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-5 large-6 columns">  
-                                    <label>Nome e Cognome
-                                        <input type="text" placeholder="Nome Cognome" />
-                                    </label>
-                                </div>
-                                <div class="small-12  medium-7 large-6 columns end">  
-                                    <label>Email
-                                        <input type="email" placeholder="email" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-12 large-12 columns">
-                                    <a role="button" href="#" class="button extra-space-button">Prenota e ricevi conferma</a>
-                                </div> 
-                            </div>
-                        </form>  
+                <h5 class="subheader">Orari apertura</h5>
+                <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
+                <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
+                <meta itemprop="openingHours" content="Sa 18:00-01:00">
+                <meta itemprop="openingHours" content="Su 12:00-22:00">
+                <div class="row">
+                    <div class="large-5 medium-5 small-6 columns">
+                        <h6>Mar&ensp;&ndash;&ensp;Ven</h6>
                     </div>
-                <span class="hide">
-                    <br>
-                    <h5>Categories</h5>
-                    <span itemprop="servesCuisine">Middle Eastern</span>,
-                    <span itemprop="servesCuisine">Mediterranean</span>
-                    <br>
-                    <h5>Price Range</h5>:
-                    <span itemprop="priceRange">$$</span>
-                </span>
+                    <div class="large-7 medium-7 small-6 columns">
+                        <h6>12&ensp;&ndash;&ensp;14
+                            <br>18&ensp;&ndash;&ensp;00
+                        </h6>
+                    </div>
+                    <div class="large-5 medium-5 small-6 columns">
+                        <h6>Sabato</h6>
+                    </div>
+                    <div class="large-7 medium-7 small-6 columns">
+                        <h6>18&ensp;&ndash;&ensp;01</h6>
+                    </div>
+                    <div class="large-5 medium-5 small-6 columns">
+                        <h6>Domenica</h6>
+                    </div>
+                    <div class="large-7 medium-7 small-6 columns">
+                        <h6>12&ensp;&ndash;&ensp;22</h6>
+                    </div>
+                </div>
+                <h6><em>Chiuso il Lunedì</em></h6>
+            </div>
+            <div class="clearfix extra-space">
+                <a role="button" href="tel:+393385071940" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
+                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Indirizzo</a>
             </div>
         </aside>
-<!-- call to action prenota un tavolo fine -->
+<!-- call to action prenota fine -->
     </div>
 <!-- inizio footer -->
     <footer class="panel-prefooter extra-space-footer">
