--- a/menu/index.html
+++ b/menu/index.html
@@ -61,7 +61,7 @@
     </div>
 <!-- fine tabbar switch-->
     <div class="row">
-        <div class="large-9 medium-12 small-12 columns">
+        <div class="large-8 medium-12 small-12 columns">
             <div class="row">
 <!-- tab inizio --> 
                 <div class="large-12 medium-12 small-12 columns tabs-content" id="menupage-text"> 
@@ -445,7 +445,7 @@
             </div>
         </div>
 <!-- call to action prenota inizio -->
-        <aside class="large-3 columns hide-for-medium-down extra-space-aside-tab-menu panel">
+        <aside class="large-4 columns hide-for-medium-down extra-space-aside-tab-menu panel">
             <div itemscope itemtype="http://schema.org/Restaurant">
                 <h5 class="subheader">Orari apertura</h5>
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
@@ -478,7 +478,7 @@
             </div>
             <div class="clearfix extra-space">
                 <a role="button" href="tel:+393385071940" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
-                <a role="button" class="button small left extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Indirizzo</a>
+                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Indirizzo</a>
             </div>
         </aside>
 <!-- call to action prenota fine -->
