--- a/menu/index.html
+++ b/menu/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="canonical" href="http://beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css" />
+    <link rel="stylesheet" href="../css/app.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -61,38 +61,58 @@
     </div>
 <!-- fine tabbar switch-->
     <div class="row">
-        <div class="large-8 medium-12 small-12 columns">
-            <div class="row">
+        <div class="large-12 medium-12 small-12 columns">
+            <div class="row panel-home-n">
 <!-- tab inizio --> 
                 <div class="large-12 medium-12 small-12 columns tabs-content" id="menupage-text"> 
 <!-- cibo--> 
                     <article class="row content active" role="tabpanel" aria-hidden="false" id="menu">
                         <div class="large-12 medium-12 small-12 columns">
-                            <h1 class="subheader ">Per Stuzzicare</h1>
+                                <h1 class="subheader ">Per Stuzzicare</h1>
+                                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">5</span></h2></a>    
+                                        <p>Peperoncini piccanti avvolti nella pancetta</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">5</span></h2></a>    
+                                        <p>Uova e capperi in padella</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">5</span></h2></a>    
+                                        <p>Asparagi in sfoglia con prosciutto crudo</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi<span class="right">9</span></h2></a>    
+                                        <p>Prosciutto, Lonza, Ciauscolo, Salame, Coppa</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/formaggi.html">Formaggi<span class="right">9</span></h2></a>    
+                                        <p>Formaggi di vacca e pecora, freschi e stagionati</p>
+                                    </li>
+                                </ul>
+                            <div class="">
+                                <h1 class="subheader">Pasta Fresca</h1>
+                                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></h2></a>    
+                                        <p>Tortelloni ricotta e spinaci con burro e salvia</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Linguine al limone<span class="right">6</span></h2></a>    
+                                        <p>Linguine di riso con panna e scorze di limone</p>
+                                    </li>
+                                </ul>                      
+                            </div>
+                            <h1 class="subheader">Hamburger</h1>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-battuto-di-vitello.html">Peperoncini e Pancetta<span class="right">5</h2></a>    
-                                    <p>Peperoncini piccanti avvolti nella pancetta</p>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></h2></a>    
+                                    <p>Tortelloni ricotta e spinaci con burro e salvia</p>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-battuto-di-vitello.html">Frittelle di capperi<span class="right">5</h2></a>    
-                                    <p>Uova e capperi in padella</p>
-                                </li>
-                                <li>
-                                    <h2><a href="menu-battuto-di-vitello.html">Asparagi in sfoglia<span class="right">5</h2></a>    
-                                    <p>Asparagi in sfoglia con crudo</p>
-                                </li>
-                                <li>
-                                    <h2><a href="menu-battuto-di-vitello.html">Salumi<span class="right">9</h2></a>    
-                                    <p>Crudo, Lonza, Ciauscolo, Salame, Coppa</p>
-                                </li>
-                            </ul>
-                            <h1 class="subheader">Pasta</h1>
-                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                                <li>
-                                    <h2><a href="menu-tris-mini-hamburger.html">Tortelloni</a></h2>
-                                    <p>Tortelloni burro e salvia</p>
-                                    <h6 class="subheader">7</h6>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/salumi.html">linguine al limone<span class="right">6</span></h2></a>    
+                                    <p>Lçinguine di riso con panna e scorze di limone</p>
                                 </li>
                                 <li>
                                     <h2><a href="menu-hamburger.html">Hamburger</a></h2>
@@ -575,8 +595,8 @@
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Paga con</h4>
-                <ul class="small-block-grid-3 medium-block-grid-3 large-block-grid-3">
-                                        <li>
+                <ul class="block-grid-cards-3">
+                    <li>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 106.2" style="max-width: 80px"  enable-background="new 0 0 170 106.2"><g><path class="img-cards" fill="#3A58A8" d="M169.9 100.5c0 3.1-2.6 5.7-5.7 5.7H5.7c-3.1 0-5.7-2.6-5.7-5.7V5.7C0 2.6 2.6 0 5.7 0h158.6c3.1 0 5.7 2.6 5.7 5.7v94.8h-.1z"/><g fill="#fff"><path d="M78.2 69.1h-8.3l5.2-32h8.3zM62.9 37.1l-7.9 22-.9-4.7L51.2 40s-.3-2.8-3.9-2.8H34.2l-.2.5s4.1.8 8.7 3.7L50 69.1h8.7l13.1-32h-8.9zM128.2 69.1h7.6l-6.6-31.8h-6.6c-3.1 0-3.8 2.4-3.8 2.4l-12.3 29.4h8.7l1.8-4.7h10.6l.6 4.7zm-9.1-11.4l4.3-11.9 2.4 11.9h-6.7zM106.9 44.8l1.2-6.9s-3.7-1.3-7.5-1.3c-4.1 0-14 1.8-14 10.6 0 8.3 11.5 8.4 11.5 12.6 0 4.3-10.3 3.5-13.7.8l-1.2 7.2s3.7 1.8 9.3 1.8c5.7 0 14.2-3 14.2-11 0-8.3-11.6-9.1-11.6-12.6.3-3.6 8.3-3.1 11.8-1.2z"/></g><path fill="#FAA634" d="M54 54.3L51.2 40s-.3-2.8-3.9-2.8H34.1l-.1.5s6.2 1.3 12.3 6.2c5.9 4.6 7.7 10.4 7.7 10.4z"/></g></svg>
                     </li>
                     <li>
