fixing team-tab

--- a/menu/index.html
+++ b/menu/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Menu</title>
-    <meta name="description" content="RIscopri i sapori con il nostro menu. Esplora le nuove birre e il piatto del giorno." />
+    <meta name="description" content="Riscopri i sapori con il nostro menu. Birre artigianali e piatti di alta cucina per tutti." />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="canonical" href="http://beerstrot.it/menu/"/>
