--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -89,7 +89,7 @@
                             </article>
                             <article class="row">
                                 <div class="medium-12 large-12 columns">
-                                    <h2>Team</h2>
+                                    <h2 id="team-tab">Team</h2>
                                     <div class="row">
                                         <div class="large-12 medium-12 small-12 columns">
                                             <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
