fixing team-tab

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -87,9 +87,9 @@
                                     <p><strong>Il seme era piantato.</strong></p><p>Giovanni ha perfezionato le sue creazioni birrarie sin dal 2007 senza mai condividerne un solo sorso con Andrea fino a quando è stato certo che il prezioso liquido fosse "just perfect". Andrea è ancora arrabbiato con Giovanni per questo episodio.....</p>
                                 </div>
                             </article>
-                            <article class="row">
+                            <article class="row" id="team-tab">
                                 <div class="medium-12 large-12 columns">
-                                    <h2 id="team-tab">Team</h2>
+                                    <h2>Team</h2>
                                     <div class="row">
                                         <div class="large-12 medium-12 small-12 columns">
                                             <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
