--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -87,12 +87,12 @@
                                     <p><strong>Il seme era piantato.</strong></p><p>Giovanni ha perfezionato le sue creazioni birrarie sin dal 2007 senza mai condividerne un solo sorso con Andrea fino a quando è stato certo che il prezioso liquido fosse "just perfect". Andrea è ancora arrabbiato con Giovanni per questo episodio.....</p>
                                 </div>
                             </article>
-                            <article class="row" id="team-tab">
+                            <article class="row">
                                 <div class="medium-12 large-12 columns">
                                     <h2>Team</h2>
                                     <div class="row">
                                         <div class="large-12 medium-12 small-12 columns">
-                                            <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
+                                            <ul id="team-tab" class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
                                                 <li>
                                                     <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">
                                                         <img src="http://beerstrot.it/asset/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
