--- a/menu/index.html
+++ b/menu/index.html
@@ -104,61 +104,88 @@
                                     </li>
                                 </ul>                      
                             </div>
-                            <h1 class="subheader">Hamburger</h1>
-                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                                <li>
-                                    <h2><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></h2></a>    
-                                    <p>Tortelloni ricotta e spinaci con burro e salvia</p>
-                                </li>
-                                <li>
-                                    <h2><a href="http://beerstrot.it/menu/cibo/salumi.html">linguine al limone<span class="right">6</span></h2></a>    
-                                    <p>Lçinguine di riso con panna e scorze di limone</p>
-                                </li>
-                                <li>
-                                    <h2><a href="menu-hamburger.html">Hamburger</a></h2>
-                                    <p>handcut chips and 220gr of meat</p>
-                                    <h6 class="subheader">€18</h6>
-                                </li>
-                                <li>
-                                    <h2><a href="menu-chicken-wings.html">Chicken Wings</a></h2>
-                                    <p>hello baby con spicy souce</p>
-                                    <h6 class="subheader">€18</h6>
-                                </li>
-                                <li>
-                                    <h2><a href="menu-lasagne-di-verdure.html">Lasagne di Verdure</a></h2>
-                                    <p>text text</p>
-                                    <h6 class="subheader">€10</h6>
-                                </li>
-                            </ul>
+                            <div class="">
+                                <h1 class="subheader">Zuppe</h1>
+                                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/gazpacho.html">Gazpacho<span class="right">5</span></h2></a>    
+                                        <p>Zuppa al pomodoro fredda</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/fave-e-scarola.html">Fave e scarola<span class="right">5</span></h2></a>    
+                                        <p>Crema di fave con scarola e crostoni</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/piselli-e-caprino.html">Piselli e caprino<span class="right">5</span></h2></a>    
+                                        <p>Vellutata di piselli e caprino</p>
+                                    </li>
+                                </ul>  
+                            </div>
+                            <div class="">
+                                <h1 class="subheader">Hamburger <br><small>Pane di nostra produzione. Servito con patate, insalata e fagioli</small></h1>
+                                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">8,5</span></h2></a>    
+                                        <p>190 granni di manzo, cipolla caramellata, insalata, fontina</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">9,5</span></h2></a>    
+                                        <p>190 granni di manzo, salsa piccante, pancetta, cheddar, rucola</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,5</span></h2></a>    
+                                        <p>190 granni di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">10</span></h2></a>    
+                                        <p>190 granni di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">13</span></h2></a>    
+                                        <p>150 granni di salmone, doppia panna, aneto, limone, rucola</p>
+                                    </li>
+                                    <li>
+                                        <h2><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">7,5</span></h2></a>    
+                                        <p>190 grammi di ceci, composta sweet, rucola</p>
+                                    </li>
+                                </ul>                      
+                            </div>
                             <h1 class="subheader">Contorni</h1>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-patatine-handcut.html">Patatine Handcut</a></h2>
-                                    <p>descrizione piatto </p>
-                                    <h6 class="subheader">€5</h6>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">4</span></h2></a>    
+                                    <p>Patate tagliate a mano fritte con la pelle</p>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-verdure-di-stagione.html">Verdure di Stagione</a></h2>
-                                    <p>descrizione piatto anche un po' molto lunga lunga lunga lunga lunga</p>
-                                    <h6 class="subheader">€7</h6>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate al forno<span class="right">4</span></h2></a>    
+                                    <p>Patate tagliate a mano cotte al forno con aglio e rosmarino</p>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-verdure-grigliate.html">Verdure Grigliate</a></h2>
-                                    <p>descrizione piatto anche un po' molto lunga lunga lunga lunga lunga</p>
-                                    <h6 class="subheader">€7</h6>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">4</span></h2></a>    
+                                    <p>Fagioli cannellini saltati al rosmarino</p>
+                                </li>
+                                <li>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">5</span></h2></a>    
+                                    <p>Verdure di stagione grigliate</p>
+                                </li>
+                                <li>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">4</span></h2></a>    
+                                    <p>Verdure fresche di stagione</p>
                                 </li>
                             </ul>
-                            <h1 class="subheader">Dolci</h1>
+                            <h1 class="subheader">Dolci<br><small>Fatti in casa</small></h1>
                             <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                 <li>
-                                    <h2><a href="menu-mascarpone-con-torta-barozzi.html">Mascarpone con Torta Barozzi</a></h2>
-                                    <p>descrizione piatto</p>
-                                    <h6 class="subheader">€8</h6>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Beeramisu<span class="right">7</span></a></h2>
+                                    <p>Tiramisù alla birra IPA</p>
                                 </li>
                                 <li>
-                                    <h2><a href="menu-strudel-di-mele-e-cannella.html">Strudel di Mele e Cannella</a></h2>
-                                    <p>descrizione piatto anche un po' lunga</p>
-                                    <h6 class="subheader">€7</h6>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheescake<span class="right">7</span></a></h2>
+                                    <p>Cheescake stile New York. Vari gusti in base alla frutta di stagione</p>
+                                </li>
+                                <li>
+                                    <h2><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Torta pere e cioccolato<span class="right">7</span></a></h2>
+                                    <p>Torta di cioccolato fondente con pere</p>
                                 </li>
                             </ul>
                         </div>
