fixing menu wip

--- a/menu/index.html
+++ b/menu/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="canonical" href="http://beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="../css/app.css" />
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -64,149 +64,149 @@
     <div class="tabs-content" id="menupage-text"> 
 <!-- cibo--> 
         <article class="content active" role="tabpanel" aria-hidden="false" id="menu">
-            <div class="panel-home-n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader ">Per Stuzzicare</h1>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">5</span></a></h2>    
                                 <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">5</span></a></h2>    
                                 <p>Uova e capperi in padella</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">5</span></a></h2>    
                                 <p>Asparagi in sfoglia con prosciutto crudo</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi<span class="right">9</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi<span class="right">9</span></a></h2>    
                                 <p>Prosciutto, Lonza, Ciauscolo, Salame, Coppa</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/formaggi.html">Formaggi<span class="right">9</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/formaggi.html">Formaggi<span class="right">9</span></a></h2>    
                                 <p>Formaggi di vacca e pecora, freschi e stagionati</p>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="panel-home-2n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader">Pasta Fresca</h1>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></a></h2>    
                                 <p>Tortelloni ricotta e spinaci con burro e salvia</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Linguine al limone<span class="right">6</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Linguine al limone<span class="right">6</span></a></h2>    
                                 <p>Linguine di riso con panna e scorze di limone</p>
                             </li>
                         </ul>                      
                     </div>
                 </div>
             </div>
-            <div class="panel-home-n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader">Zuppe</h1>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/gazpacho.html">Gazpacho<span class="right">5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/gazpacho.html">Gazpacho<span class="right">5</span></a></h2>    
                                 <p>Zuppa al pomodoro fredda</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/fave-e-scarola.html">Fave e scarola<span class="right">5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/fave-e-scarola.html">Fave e scarola<span class="right">5</span></a></h2>    
                                 <p>Crema di fave con scarola e crostoni</p>
                             </li>
                         </ul>  
                     </div>
                 </div>
             </div>
-            <div class="panel-home-2n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader">Hamburger <br><small>Pane di nostra produzione. Servito con patate, insalata e fagioli</small></h1>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">8,5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">8,5</span></a></h2>    
                                 <p>190 granni di manzo, cipolla caramellata, insalata, fontina</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">9,5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">9,5</span></a></h2>    
                                 <p>190 granni di manzo, salsa piccante, pancetta, cheddar, rucola</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,5</span></a></h2>    
                                 <p>190 granni di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">10</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">10</span></a></h2>    
                                 <p>190 granni di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">13</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">13</span></a></h2>    
                                 <p>150 granni di salmone, doppia panna, aneto, limone, rucola</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">7,5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">7,5</span></a></h2>    
                                 <p>190 grammi di ceci, composta sweet, rucola</p>
                             </li>
                         </ul>                      
                     </div>   
                 </div>
             </div>
-            <div class="panel-home-n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader">Carni <br></h1>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/costine-di-maiale.html">Costine di maiale<span class="right">9,5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/costine-di-maiale.html">Costine di maiale<span class="right">9,5</span></a></h2>    
                                 <p>10 costine di maiale in salsa barbeque</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/chicken-wing.html">Chicken Wings<span class="right">9,5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/chicken-wing.html">Chicken Wings<span class="right">9,5</span></a></h2>    
                                 <p>10 Alette di pollo servite con blu cheese</p>
                             </li>
                         </ul>                      
                     </div>
                 </div>
             </div>
-            <div class="panel-home-2n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader">Contorni</h1>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">4</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">4</span></a></h2>    
                                 <p>Patate tagliate a mano fritte con la pelle</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate al forno<span class="right">4</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate al forno<span class="right">4</span></a></h2>    
                                 <p>Patate tagliate a mano cotte al forno con aglio e rosmarino</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">4</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">4</span></a></h2>    
                                 <p>Fagioli cannellini saltati al rosmarino</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">5</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">5</span></a></h2>    
                                 <p>Verdure grigliate di stagione</p>
                             </li>
                             <li>
-                                <h2><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">4</span></h2></a>    
+                                <h2><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">4</span></a></h2>    
                                 <p>Verdure fresche di stagione</p>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="panel-home-n">
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
                         <h1 class="subheader">Dolci<br><small>Fatti in casa</small></h1>
@@ -531,7 +531,7 @@
         </div>
     </div>
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
