fixing ape-regina.html

--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -2,12 +2,24 @@
 <!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Black IPA Violin</title>
-    <meta name="description" content="Una birra scura con note da ruffiano" />
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
+    <title>Beerstrot | Birrificio MC-77 | Birra Ape Regina</title>
+    <meta name="description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta name="author" content="Giulia Mazza"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="Birra Ape Regina"/>
+    <meta name="twitter:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Dall'America alle Marche"/>
+    <meta property="og:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
