fixing footer extra-space

--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -142,7 +142,7 @@
     </div>
 <!-- fine commenti --> 
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
