--- a/menu/index.html
+++ b/menu/index.html
@@ -454,7 +454,7 @@
     </div>
 <!-- tab fine -->
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
