--- a/menu/index.html
+++ b/menu/index.html
@@ -348,110 +348,115 @@
         </article>
 <!-- birra fine-->
 <!-- vino-->
-        <article class="row content" role="tabpanel" aria-hidden="false" id="vino">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Bollicine</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                    <li>
-                        <h3>Franciacorta IPA</h3>
-                        <p>Fantasticamente amara</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                    <li>
-                        <h3>Franciacorta Porter</h3>
-                        <p>Note intense di caffè con crema</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                </ul>
-                <h2 class="subheader">Bianchi</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                    <li>
-                        <h3>Bianco IPA</h3>
-                        <p>Fantasticamente amara</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                    <li>
-                        <h3>Bianco Porter</h3>
-                        <p>Note intense di caffè con crema</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                   <li>
-                        <h3>Bianco conero</h3>
-                        <p>Un dolce intenso</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                </ul>
-                <h2 class="subheader">Rossi</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                    <li>
-                        <h3>Rosso IPA</h3>
-                        <p>Fantasticamente amara</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                    <li>
-                        <h3>Rosso Porter</h3>
-                        <p>Note intense di caffè con crema</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                    <li>
-                        <h3>Rosso IPA Violin</h3>
-                        <p>Un dolce intenso</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                    <li>
-                        <h3>Rosso six IPA</h3>
-                        <p>Un amaro senza compromessi</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                    <li>
-                        <h3>Rosso six IPA</h3>
-                        <p>Un amaro senza compromessi</p>
-                        <h6 class="subheader">Bottiglia €27 | Bicchiere €5</h6>
-                    </li>
-                </ul>
+        <article class="content" role="tabpanel" aria-hidden="false" id="vino">
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Bollicine</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Franciacorta Satèn<span class="right"> 6 | 25</span></a></h3>
+                                <p>Il Mosnel</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Passerina Brut<span class="right"> 5 | 3</span></a></h3>
+                                <p>Velenosi</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
+                                <p>Birrificio xxxx. Rossa</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
+                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Bianchi</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Bianco della Casa<span class="right"> 1/4 3 | lt. 12</span></a></h3>
+                                <p>Il Mosnel</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Passerina Secco<span class="right"> 5 | 18</span></a></h3>
+                                <p>Velenosi</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
+                                <p>Birrificio xxxx. Rossa</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
+                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Rossi</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Rosso della Casa<span class="right"> 1/4 3 | lt. 12</span></a></h3>
+                                <p>Il Mosnel</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Passerina Secco<span class="right"> 5 | 18</span></a></h3>
+                                <p>Velenosi</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
+                                <p>Birrificio xxxx. Rossa</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
+                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </article>
 <!-- vino fine-->
 <!-- drink -->
-        <article class="row content" role="tabpanel" aria-hidden="false" id="drinks">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Succhi Biologici</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                    <li>
-                        <h3>Pera, Pesca, Albicocca, Banana</h3>
-                        <h6 class="subheader">€4.5</h6>
-                    </li>
-                </ul>
-                <h2 class="subheader">A base di Rhum</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                    <li>
-                        <h3>Cuba libre</h3>
-                        <p>Scelta di Capeza 30 anos, Bacardi</p>
-                        <h6 class="subheader">€8.5</h6>
-                    </li>
-                    <li>
-                        <h3>Whatever</h3>
-                        <p>Scelta di Capeza 30 anos, Bacardi</p>
-                        <h6 class="subheader">€6</h6>
-                    </li>
-                </ul>
-                <h2 class="subheader">A base di Gin</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                    <li>
-                        <h3>Gin Tonic</h3>
-                        <p>Scelta di Gin de Mar, Hendrick</p>
-                        <h6 class="subheader">€7</h6>
-                    </li>
-                    <li>
-                        <h3>Gin Fizz</h3>
-                        <h6 class="subheader">€8</h6>
-                        <p>Scelta di Gin de Mar, Hendrick</p>
-                    </li>
-                </ul>  
+        <article class="content" role="tabpanel" aria-hidden="true" id="drinks">
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Alcolici</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Cuba libre<span class="right">6</span></a></h3>
+                                <p>Scelta di Capeza 30 anos, Bacardi</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Gin Tonic<span class="right"> 5 | 3</span></a></h3>
+                                <p>Scelta di Gin de Mar, Hendrick</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
+                                <p>Birrificio xxxx. Rossa</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
+                                <p>Birrificio xxxx. Rossa</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </article>
 <!-- Drink fine -->
     </div>
+    
 <!-- tab fine -->
 <!-- inizio footer -->
     <footer class="panel-prefooter">
