--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/birra/ape-regina.html"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="../../css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -92,7 +92,7 @@
         <div class="medium-8 large-8 columns">
             <div class="row">
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
-                    <ul class="small-block-grid-3">
+                    <ul class="block-grid-social-3">
                         <li>
                             <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
