--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -99,7 +99,7 @@
         <div class="medium-8 large-8 columns">
             <div class="row">
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
-                    <ul class="small-block-grid-3">
+                    <ul class="block-grid-social-3">
                         <li>
                             <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi/apertura.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
