--- a/menu/index.html
+++ b/menu/index.html
@@ -458,12 +458,69 @@
     </div>
     
 <!-- tab fine -->
+<!-- inizio social sharing -->
+    <div class="row extra-space">
+        <aside class="medium-4 large-4 columns">
+            <h2>Condividi</h2>
+        </aside>
+        <div class="medium-8 large-8 columns">
+            <div class="row">
+                <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
+                    <ul class="block-grid-social-3">
+                        <li>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                        </li>
+                        <li>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                        </li>
+                        <li>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- fine social sharing -->
+<!-- inizio navigazione nota: non ha extra space -->
+    <div class="row">
+        <div class="medium-8 medium-push-4 large-8 large-push-4 columns">
+            <div class="clearfix">
+                <a href="http://beerstrot.it/menu/#fndtn-birra" class="left">&larr; Torna al menu</a>
+                <a href="menu-Beerstrot-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
+            </div>
+        </div> 
+    </div>
+<!-- fine navigazione -->
+<!-- inizio commenti -->
+    <div class="row extra-space">
+        <aside class="medium-4 large-4 columns">
+            <h2>Commenta la Birra</h2>
+        </aside>
+        <div class="medium-8 large-8 columns extra-space-commenti">
+                <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'beerstrot'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + 'beerstrot.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    
+        </div>
+    </div>
+<!-- fine commenti --> 
 <!-- inizio footer -->
     <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
-                <ul class="block-grid-social-3">
+                <ul class="inline-list">
                     <li>
                         <a href="https://www.facebook.com/cavecchiabeerstrot" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" style="width: 32px; height: 32px;" enable-background="new 0 0 32 32"><g><path class="fi-social" fill="#3b5998" d="M68 0H4C1.8 0 0 1.8 0 4v64c0 2.2 1.8 4 4 4h34.5V44.1h-9.4V33.3h9.4v-8c0-9.3 5.7-14.4 14-14.4 4 0 7.4.3 8.4.4V21h-5.8c-4.5 0-5.4 2.1-5.4 5.3v6.9h10.8L59 44.1h-9.4V72H68c2.2 0 4-1.8 4-4V4c0-2.2-1.8-4-4-4z"/></g></svg></a>
                     <li>
