--- a/chi-siamo/team/giovanni-attilio.html
+++ b/chi-siamo/team/giovanni-attilio.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Giovanni Attilio</title>
+    <title>Beerstrot | Team | Giovanni Attilio</title>
     <meta name="description" content="Fondatore di Beerstrot e brewer master in charge"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="canonical" href="http://beerstrot.it/chi-siamo/giovanni-attilio.html"/>
+    <link rel="canonical" href="http://beerstrot.it/chi-siamo/team/giovanni-attilio.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
