--- a/chi-siamo/team/giulia-mazza.html
+++ b/chi-siamo/team/giulia-mazza.html
@@ -63,7 +63,7 @@
     <div class="row">
         <div class="medium-12 large-12 columns extra-space">
             <div class="clearfix">
-                <a href="http://beerstrot.it/chi-siamo#team-tab" class="left">&larr; Tutto il team</a>
+                <a href="http://beerstrot.it/chi-siamo/" class="left">&larr; Tutto il team</a>
             </div>
         </div> 
     </div>
