--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -119,7 +119,7 @@
     <div class="row">
         <div class="medium-8 medium-push-4 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://beerstrot.it/eventi" class="left">&larr; Lista eventi</a>
+                <a href="http://beerstrot.it/eventi/" class="left">&larr; Lista eventi</a>
                 <!-- <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a> -->
             </div>
         </div> 
