--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
-    <meta name="description" content="Birreria, Pub, o Beerstrot? Birra artigianale e cibo di altissima qualità. Utilizziamo solo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
+    <meta name="description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
