--- a/menu/index.html
+++ b/menu/index.html
@@ -43,7 +43,7 @@
 <!-- inizio tabbar switch-->
     <div class="row">
         <div class="medium-12 large-12 columns extra-space-hero">
-            <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:false" role="tablist">
+            <ul class="tabs" data-tab data-options="deep_linking:false; scroll_to_content:false" role="tablist">
                 <li class="tab-title active" role="presentational">
                     <a href="#menu" role="tab" tabindex="0" aria-selected="true" controls="menu">Menu</a>
                 </li>
