Revert "disable menu switch"
This reverts commit c8000c0c4abce994f3d0ac68374b6b25305b6072.

--- a/menu/index.html
+++ b/menu/index.html
@@ -41,9 +41,9 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio tabbar switch-->
-    <!-- <div class="row">
+    <div class="row">
         <div class="medium-12 large-12 columns extra-space-hero">
-            <ul class="tabs" data-tab role="tablist">
+            <ul class="tabs" data-tab data-options="deep_linking:false; scroll_to_content:false" role="tablist">
                 <li class="tab-title active" role="presentational">
                     <a href="#menu" role="tab" tabindex="0" aria-selected="true" controls="menu">Menu</a>
                 </li>
@@ -58,7 +58,7 @@
                 </li>
             </ul>
         </div>
-    </div> -->
+    </div>
 <!-- fine tabbar switch-->
 <!-- tab inizio --> 
     <div class="tabs-content" id="menupage-text"> 
